@@ -128,6 +128,17 @@ public class InputMultiplexer implements InputProcessor {
 		return false;
 	}
 
+	public boolean touchCancelled (int screenX, int screenY, int pointer, int button) {
+		Object[] items = processors.begin();
+		try {
+			for (int i = 0, n = processors.size; i < n; i++)
+				if (((InputProcessor)items[i]).touchCancelled(screenX, screenY, pointer, button)) return true;
+		} finally {
+			processors.end();
+		}
+		return false;
+	}
+
 	public boolean touchDragged (int screenX, int screenY, int pointer) {
 		Object[] items = processors.begin();
 		try {
