@@ -174,6 +174,11 @@ public class RemoteSender implements InputProcessor {
 	}
 
 	@Override
+	public boolean touchCancelled (int screenX, int screenY, int pointer, int button) {
+		return touchUp(screenX, screenY, pointer, button);
+	}
+
+	@Override
 	public boolean touchDragged (int x, int y, int pointer) {
 		synchronized (this) {
 			if (!connected) return false;
